--- a/index.html
+++ b/index.html
@@ -1,23 +1,43 @@
 <html>
-	<head>
-		<title>Reaction Tester</title>
-	
-		<link rel="stylesheet" type="text/css" href="ReactionCSS.css">
-	
-	</head>
-	
-	<body>
-		
-		<h1>Test Your Reactions!</h1>	
-	
-		<p>Click on the shapes as quickly as you can...</p>
-	
-		<p id="time">Time taken: <span id="timeTaken"></span></p>
-	 
-		<div id="shape">
-		</div>
-		
-		<script type="text/javascript" src="script.js"></script>
-	
-	</body>
+  <head>
+    <title>Reaction Tester</title>
+
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <!-- GOOGLE FONTS CDN -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Source+Code+Pro:wght@200&display=swap"
+      rel="stylesheet"
+    />
+	<link rel="icon" type="image/x-icon" href="/images/favicon.png">
+  </head>
+
+  <body>
+    <div class="mac-window">
+      <div class="mac-topbar">
+        <div class="mac-icons">
+          <!-- Three colored icons here -->
+          <!-- Example icon div -->
+          <div class="mac-icon red"></div>
+          <div class="mac-icon yellow"></div>
+          <div class="mac-icon green"></div>
+        </div>
+        <span class="title">Test Your Reactions!</span>
+      </div>
+      <div class="game-container" id="gameContainer">
+        <!-- Your game content goes here -->
+        <div class="container"></div>
+        <p class="click-text">Click on the shapes as quickly as you can...</p>
+        <p class="time">
+          Time taken: <span class="time-in-sec" id="timeTaken"></span>
+        </p>
+        <div id="shape"></div>
+      </div>
+    </div>
+
+    <script type="text/javascript" src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.0.1"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  </body>
 </html>
