--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Source+Code+Pro:wght@200&display=swap"
       rel="stylesheet"
     />
-	<link rel="icon" type="image/x-icon" href="/images/favicon.png">
+	<link rel="icon" type="image/x-icon" href="images/favicon.png?">
   </head>
 
   <body>
