open graph meta tags added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
       href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Source+Code+Pro:wght@200&display=swap"
       rel="stylesheet"
     />
-	<link rel="icon" type="image/x-icon" href="images/favicon.png?">
+	  <link rel="icon" type="image/x-icon" href="images/favicon.png?">
+    <meta property="og:title" content="Test Your Reactions!">
+    <meta property="og:description" content="Fun interactive game made in JS">
+    <meta property="og:image" content="https://github.com/jasmeet-matta/reaction-tester/blob/main/images/reaction-tester.png"> <!-- URL to your image -->
+    <meta property="og:url" content="https://jasmeet-matta.github.io/reaction-tester/">
+    <meta property="og:type" content="website">
   </head>
 
   <body>
