--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	  <link rel="icon" type="image/x-icon" href="images/favicon.png?">
     <meta property="og:title" content="Test Your Reactions!">
     <meta property="og:description" content="Fun interactive game made in JS">
-    <meta property="og:image" content="https://github.com/jasmeet-matta/reaction-tester/blob/main/images/reaction-tester.png"> <!-- URL to your image -->
+    <meta property="og:image" content="https://raw.githubusercontent.com/jasmeet-matta/reaction-tester/main/images/reaction-tester.png"> <!-- URL to your image -->
     <meta property="og:url" content="https://jasmeet-matta.github.io/reaction-tester/">
     <meta property="og:type" content="website">
   </head>
