--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
       <div class="game-container" id="gameContainer">
         <!-- Your game content goes here -->
-        <div class="container"></div>
+        <!-- <div class="container"></div> -->
         <p class="click-text">Click on the shapes as quickly as you can...</p>
         <p class="time">
           Time taken: <span class="time-in-sec" id="timeTaken"></span>
